# easy21

./: README.md  environment.py  helpers.py  monte_carlo.py  monte_carlo_evaluation.py  pyproject.toml  random_agent.py
monte_carlo/: action_state_policy_evaluation.py  action_state_policy_plots.ipynb  monte_carlo_control.ipynb  monte_carlo_control.py  state_policy_evaluation.py  state_policy_plots.ipynb
notebooks/: monte_carlo.ipynb  temporal_difference.ipynb
src/: easy21.py  environment.py  helpers.py  mc_agent.py  random_agent.py  td_agent.py
src/temporal_difference/: td_control.ipynb  td_control.py
