[tool.poetry]
name = "easy21"
version = "0.1.0"
description = ""
authors = ["Asaf Keidar <asafkeidar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
ipython = "^8.18.0"
jupyterlab = "^4.0.9"
notebook = "^7.0.6"
gymnasium = {extras = ["toy-text"], version = "^0.29.1"}
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
